--- a/index.html
+++ b/index.html
@@ -77,17 +77,135 @@
       </nav>
 
       <!-- hero section -->
+      <div class="hero">
+          <h1>Continue Exploring</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Vitae explicabo debitis est autem dicta.</p>
+          <div class="button">
+            <p>Explore Tours</p>
+          </div>
+      </div>
       <!-- end of hero section -->
     </header>
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="about">
+      <h2>About <span>Us</span></h2>
+      <div class="about-cont">
+        <image src="./images/about.jpeg" alt="about us - tropical island picture">
+        <div class="about1">
+          <h4>Explore the difference</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Aspernatur quisquam harum nam cumque temporibus explicabo dolorum sapiente odio unde dolor?</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Aspernatur quisquam harum nam cumque temporibus explicabo dolorum sapiente odio unde dolor?</p>
+        </div>
+      </div>
+
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="services">
+      <h3>Our <span>Services</span></h3>
+      <div class="services-cont">
+        <div class="ser service1">
+          <i class="fas fa-wallet"></i>
+          <div>
+            <h4>Saving money</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, officia.</p>
+          </div>
+        </div>
+        <div class="ser service2">
+          <i class="fas fa-tree"></i>
+          <div>
+            <h4>Endless Hiking</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, officia.</p>
+        </div>
+        </div>
+        <div class="ser service3">
+          <i class="fas fa-socks"></i>
+          <div>
+            <h4>Amazing Comfort</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, officia.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="featured">
+      <p class="heading-f">Featured <span>Tours</span></p>
+        <div class="tours">
+        <div class="tour tour1">
+          <div>
+            <img src="./images/tour-1.jpeg">
+            <p>august 26th, 2020</p>
+          </div>
+          <h5>Tibet Adventure</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+          <span>
+            <i class="fas fa-map"></i>
+            <p>China</p>
+          </span>
+          <span>
+            <p>From $2100</p>
+          </span>
+        </div>
+        <div class="tour tour2">
+          <div>
+            <img src="./images/tour-2.jpeg">
+            <p>october 1th, 2020</p>
+          </div>
+          <h5>best of java</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+          <span>
+            <i class="fas fa-map"></i>
+            <p>Indonesia</p>
+          </span>
+          <p>11 days</p>
+          <span>
+            <p>From $1400</p>
+          </span>
+        </div><div class="tour tour3">
+          <div>
+            <img src="./images/tour-3.jpeg">
+            <p>september 15th, 2020</p>
+          </div>
+          <h5>explore hong kong</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+          <span>
+            <i class="fas fa-map"></i>
+            <p>Hong Kong</p>
+          </span>
+          <p>8 days</p>
+          <span>
+            <p>From $5000</p>
+          </span>
+        </div>
+        <div class="tour tour4">
+          <div>
+            <img src="./images/tour-4.jpeg">
+            <p>december 5th, 2019</p>
+          </div>
+          <h5>kenya highlights</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+          <span>
+            <i class="fas fa-map"></i>
+            <p>Kenya</p>
+          </span>
+          <p>20 days</p>
+          <span>
+            <p>From $3300</p>
+          </span>
+        </div>
+        </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
