--- a/index.html
+++ b/index.html
@@ -141,83 +141,144 @@
         <div class="tour tour1">
           <div>
             <img src="./images/tour-1.jpeg">
-            <p>august 26th, 2020</p>
+            <p class="date">august 26th, 2020</p>
           </div>
-          <h5>Tibet Adventure</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
-            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
-          <span>
-            <i class="fas fa-map"></i>
-            <p>China</p>
-          </span>
-          <span>
-            <p>From $2100</p>
-          </span>
+          <div class="container">
+            <h5>Tibet Adventure</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+              voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+            <div class=bottom-cont">
+              <div class="bottom-txt">
+              <i class="fas fa-map"></i>
+              <p>China</p>
+              </div>
+            <p class="bottom-txt">11 days</p>
+            <div class="bottom-txt">
+              <p>From $2100</p>
+            </div>
+            </div>
+          </div>
         </div>
         <div class="tour tour2">
           <div>
             <img src="./images/tour-2.jpeg">
-            <p>october 1th, 2020</p>
+            <p class="date">october 1th, 2020</p>
           </div>
-          <h5>best of java</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
-            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
-          <span>
-            <i class="fas fa-map"></i>
-            <p>Indonesia</p>
-          </span>
-          <p>11 days</p>
-          <span>
-            <p>From $1400</p>
-          </span>
-        </div><div class="tour tour3">
+          <div class="container">
+            <h5>best of java</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+              voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+            <div class=bottom-cont">
+              <div class="bottom-txt">
+              <i class="fas fa-map"></i>
+              <p>Indonesia</p>
+              </div>
+            <p class="bottom-txt">11 days</p>
+            <div class="bottom-txt">
+              <p>From $1400</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="tour tour3">
           <div>
             <img src="./images/tour-3.jpeg">
-            <p>september 15th, 2020</p>
+            <p class="date">september 15th, 2020</p>
           </div>
-          <h5>explore hong kong</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
-            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
-          <span>
-            <i class="fas fa-map"></i>
-            <p>Hong Kong</p>
-          </span>
-          <p>8 days</p>
-          <span>
-            <p>From $5000</p>
-          </span>
+          <div class="container">
+            <h5>explore hong kong</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+              voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+            <div class=bottom-cont">
+              <div class="bottom-txt">
+              <i class="fas fa-map"></i>
+              <p>Hong Kong</p>
+              </div>
+            <p class="bottom-txt">8 days</p>
+            <div class="bottom-txt">
+              <p>From $5000</p>
+            </div>
+          </div>
+          </div>
         </div>
         <div class="tour tour4">
           <div>
             <img src="./images/tour-4.jpeg">
-            <p>december 5th, 2019</p>
+            <p class="date">december 5th, 2019</p>
           </div>
-          <h5>kenya highlights</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
-            voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
-          <span>
-            <i class="fas fa-map"></i>
-            <p>Kenya</p>
-          </span>
-          <p>20 days</p>
-          <span>
-            <p>From $3300</p>
-          </span>
+          <div class="container">
+            <h5>kenya highlights</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vitae tempore 
+              voluptatum maxime reprehenderit eum quod exercitationem fugit, qui corporis.</p>
+            <div class=bottom-cont">
+              <div class="bottom-txt">
+              <i class="fas fa-map"></i>
+              <p>Kenya</p>
+              </div>
+            <p class="bottom-txt">20 days</p>
+            <div class="bottom-txt">
+              <p class="bottom-txt">From $3300</p>
+            </div>
+            </div>
+          </div>
         </div>
         </div>
     </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
+    <section class="contact">
+      <form>
+        <h4>want latest tour info and updates?</h4>
+        <input type="email" name="email" id="email">
+        <button>Submit</button>
+        <p>Sign up for newsletter and stay up to date</p>
+      </form>
+      
+      
+    </section>
 
     <!-- end of contact -->
 
     <!-- gallery  -->
+    <section class="gallery">
+      <img src="./images/tour-1.jpeg" alt="village">
+      <img src="./images/tour-2.jpeg" alt="roadway">
+      <img src="./images/tour-3.jpeg" alt="city">
+      <img src="./images/tour-4.jpeg" alt="elephant">
+      <img src="./images/tour-5.jpeg" alt="zebras">
+      <img src="./images/tour-6.jpeg" alt="Taj-Majal">
+      <img src="./images/tour-1.jpeg" alt="village">
+      <img src="./images/tour-2.jpeg" alt="roadway">
 
+    </section>
     <!-- end of gallery  -->
 
     <!-- footer -->
-
+    <footer class="footer">
+      <ul class="nav-links" id="nav-links">
+        <li>
+          <a href="#home" class="nav-link">home</a>
+        </li>
+        <li>
+          <a href="#about" class="nav-link">about</a>
+        </li>
+        <li>
+          <a href="#services" class="nav-link">services</a>
+        </li>
+        <li>
+          <a href="#featured" class="nav-link">featured</a>
+        </li>
+        <li>
+          <a href="#gallery" class="nav-link">gallery</a>
+        </li>
+      </ul>
+      <div class="social-icons">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+      <p class="copyright">copyright © Tabi Tabi travel tours company 2020. all rights reserved</p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
